# tangermeme

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
cmd/: _fimo.py  _tomtom.py  tangermeme
docs/: conf.py  index.rst  requirements.txt  whats_new.rst
docs/_static/: custom.css
docs/api/: ablate.rst  annotate.rst  deep_lift_shap.rst  design.rst  ersatz.rst  io.rst  ism.rst  kmers.rst  marginalize.rst  match.rst  pisa.rst  plot.rst  predict.rst  product.rst  saturation_mutagenesis.rst  seqlet.rst  seqlets.rst  space.rst  utils.rst  variant_effect.rst
docs/howto/: How_To_-_Reduce_Friction_and_Save_Time_with_Tangermeme.ipynb
docs/paper/: Fig1-Timings+Examples.ipynb  Fig1_Timings_Examples.ipynb  Fig2-Seqlet_Calling_and_Downstream_Analyses.ipynb  Fig2_Seqlet_Calling_and_Downstream_Analyses.ipynb  ohe_timings.npy
docs/tutorials/: Tutorial 1 Sequence Manipulation.ipynb  Tutorial 4 Predictions.ipynb  Tutorial_10_Design.ipynb  Tutorial_11_Cartesian_Product.ipynb  Tutorial_1_Sequence_Manipulation.ipynb  Tutorial_2_MEME_Suite_Tools.ipynb  Tutorial_3_IO_and_Data_Loading.ipynb  Tutorial_4_Predictions.ipynb  Tutorial_5_Marginalization.ipynb  Tutorial_6_Ablation.ipynb  Tutorial_6_Spacing.ipynb  Tutorial_7_In_silico_Saturation_Mutagenesis.ipynb  Tutorial_7_Spacing.ipynb  Tutorial_8_In_silico_Saturation_Mutagenesis.ipynb  Tutorial_8_Variant_Effect.ipynb  Tutorial_9_Variant_Effect.ipynb  Tutorial_A1_Ersatz_Sequence_Manipulation.ipynb  Tutorial_A2_Predictions.ipynb  Tutorial_A3_Deep_LIFT_SHAP.ipynb  Tutorial_A4_Seqlets.ipynb  Tutorial_A5_Annotations.ipynb  Tutorial_B1_Marginalization.ipynb  Tutorial_B2_Ablation.ipynb  (+13 more)
tangermeme/: __init__.py  _compat.py  ablate.py  annotate.py  attribute.py  deep_lift_shap.py  design.py  dmaps.py  ersatz.py  io.py  ism.py  kmers.py  marginalize.py  match.py  pisa.py  plot.py  predict.py  product.py  results.py  saturation_mutagenesis.py  seqlet.py  space.py  utils.py  variant_effect.py
tests/: __init__.py  conftest.py  test_ablate.py  test_annotate.py  test_attribute.py  test_beam_substitution.py  test_deep_lift_shap.py  test_design.py  test_ersatz.py  test_greedy_marginalize.py  test_greedy_substitution.py  test_install_skills.py  test_io.py  test_ism.py  test_kmers.py  test_marginalize.py  test_match.py  test_pisa.py  test_plot.py  test_predict.py  test_product.py  test_saturation_mutagenesis.py  test_screen.py  test_seqlet.py  test_space.py  test_utils.py  test_variant_effect.py  toy_models.py
(+48 files in other folders)
