[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "tangermeme"
dynamic = ["version"]
description = "Biological sequence analysis for the modern age."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Jacob Schreiber", email = "jmschreiber91@gmail.com" }]
keywords = [
    "genomics",
    "machine-learning",
    "deep-learning",
    "bioinformatics",
    "sequence-analysis",
    "motif-discovery",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
    "pandas>=2.0",
    "torch>=2.0",
    "pyfaidx>=0.7.2.1",
    "pybigtools>=0.2",
    "tqdm>=4.65",
    "numba>=0.58",
    "joblib>=1.3",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "memelite>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "captum>=0.5.0",
    "ruff>=0.4",
    "build>=1.0",
    "twine>=4.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "nbsphinx>=0.9",
    "jinja2>=3.1.3",
    "jupyter>=1.0",
    "nbconvert>=7.0",
]

[project.scripts]
tangermeme-install-skills = "tangermeme._skills.install:main"

[project.urls]
Homepage      = "https://github.com/jmschrei/tangermeme"
Repository    = "https://github.com/jmschrei/tangermeme"
Issues        = "https://github.com/jmschrei/tangermeme/issues"
Documentation = "https://tangermeme.readthedocs.io"

[tool.hatch.version]
path = "tangermeme/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["tangermeme"]

[tool.hatch.build.targets.sdist]
include = [
    "tangermeme",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    "tests",
    "docs",
    "claude_comments",
    "dist",
    "*.egg-info",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not cmd'"
markers = [
    "cmd: tests that invoke command-line entry points",
    "gpu: tests that run on GPU (auto-skipped when CUDA is unavailable)",
]
